Crash when unloading a scene with pynodes and idprop of type id #61515

Closed
opened 2019-02-13 15:41:49 +01:00 by Jacques Lucke · 12 comments
Member

Blender Version
Broken: c6e3a20ab6

Exact steps for others to reproduce the error

  1. Execute the script.
  2. Select an object in the node.
  3. File -> New -> General -> Crash.
lang=python
import bpy
from bpy.props import PointerProperty

class MyTreeType(bpy.types.NodeTree):
    bl_idname = "MyTreeType"
    bl_label = "My Tree Type"
    bl_icon = "NONE"
    
    
class MyNodeType(bpy.types.Node):
    bl_idname = "MyNodeType"
    bl_label = "My Node Type"

    object: PointerProperty(type=bpy.types.Object)
    
    def draw_buttons(self, context, layout):
        layout.prop(self, "object", text="")

    
bpy.utils.register_class(MyTreeType)
bpy.utils.register_class(MyNodeType)

tree = bpy.data.node_groups.new("Test Tree", "MyTreeType")
tree.nodes.new("MyNodeType")

bpy.context.area.type = "NODE_EDITOR"
bpy.context.space_data.tree_type = "MyTreeType"
bpy.context.space_data.node_tree = tree
**Blender Version** Broken: c6e3a20ab6 **Exact steps for others to reproduce the error** 1. Execute the script. 2. Select an object in the node. 3. `File -> New -> General` -> Crash. ``` lang=python import bpy from bpy.props import PointerProperty class MyTreeType(bpy.types.NodeTree): bl_idname = "MyTreeType" bl_label = "My Tree Type" bl_icon = "NONE" class MyNodeType(bpy.types.Node): bl_idname = "MyNodeType" bl_label = "My Node Type" object: PointerProperty(type=bpy.types.Object) def draw_buttons(self, context, layout): layout.prop(self, "object", text="") bpy.utils.register_class(MyTreeType) bpy.utils.register_class(MyNodeType) tree = bpy.data.node_groups.new("Test Tree", "MyTreeType") tree.nodes.new("MyNodeType") bpy.context.area.type = "NODE_EDITOR" bpy.context.space_data.tree_type = "MyTreeType" bpy.context.space_data.node_tree = tree ```
Author
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Bastien Montagne was assigned by Jacques Lucke 2019-02-13 15:42:10 +01:00

Added subscriber: @ZedDB

Added subscriber: @ZedDB

@JacquesLucke I can not reproduce this on my end (74a3d9b410)

@JacquesLucke I can not reproduce this on my end (74a3d9b410)

This issue was referenced by a4e81e2dfb

This issue was referenced by a4e81e2dfbdc63e7db3132f81a02cc5ac4985374

File->new triggers a "Main nuke", which means we do not clean up properly every IDs, and count on order in which ID types are freed to save us from that kind of issue.

But freeing code of each ID type should not do any ID refcounting management either, yet another bug in NT code. :|

File->new triggers a "Main nuke", which means we do not clean up properly every IDs, and count on order in which ID types are freed to save us from that kind of issue. But freeing code of each ID type should *not* do any ID refcounting management either, yet another bug in NT code. :|
Author
Member

@ZedDB, maybe in a debug build?

__strlen_avx2() (/build/glibc-OTsEL5/glibc-2.27/sysdeps/x86_64/multiarch/strlen-avx2.S:62)
_IO_vfprintf_internal(_IO_FILE * s, const char * format, struct __va_list_tag * ap) (/build/glibc-OTsEL5/glibc-2.27/stdio-common/vfprintf.c:1643)
_IO_vsnprintf(char * string, size_t maxlen, const char * format, struct __va_list_tag * args) (/build/glibc-OTsEL5/glibc-2.27/libio/vsnprintf.c:114)
clg_str_vappendf(CLogStringBuf * cstr, const char * fmt, struct __va_list_tag * args) (/home/jacques/blender-git/blender/intern/clog/clog.c:178)
CLG_logf(CLG_LogType * lg, enum CLG_Severity severity, const char * file_line, const char * fn, const char * fmt) (/home/jacques/blender-git/blender/intern/clog/clog.c:484)
id_us_min(ID * id) (/home/jacques/blender-git/blender/source/blender/blenkernel/intern/library.c:239)
IDP_FreeProperty_ex(IDProperty * prop, const _Bool do_id_user) (/home/jacques/blender-git/blender/source/blender/blenkernel/intern/idprop.c:1076)
IDP_FreeGroup(IDProperty * prop, const _Bool do_id_user) (/home/jacques/blender-git/blender/source/blender/blenkernel/intern/idprop.c:746)
IDP_FreeProperty_ex(IDProperty * prop, const _Bool do_id_user) (/home/jacques/blender-git/blender/source/blender/blenkernel/intern/idprop.c:1069)
IDP_FreeProperty(IDProperty * prop) (/home/jacques/blender-git/blender/source/blender/blenkernel/intern/idprop.c:1084)
node_free_node_ex(Main * bmain, bNodeTree * ntree, bNode * node, _Bool remove_animdata, _Bool use_api_free_cb) (/home/jacques/blender-git/blender/source/blender/blenkernel/intern/node.c:1756)
ntreeFreeTree(bNodeTree * ntree) (/home/jacques/blender-git/blender/source/blender/blenkernel/intern/node.c:1843)
BKE_libblock_free_datablock(ID * id, const int UNUSED_flag) (/home/jacques/blender-git/blender/source/blender/blenkernel/intern/library_remap.c:770)
BKE_id_free_ex(Main * bmain, void * idv, int flag, const _Bool use_flag_from_idtag) (/home/jacques/blender-git/blender/source/blender/blenkernel/intern/library_remap.c:875)
BKE_main_free(Main * mainvar) (/home/jacques/blender-git/blender/source/blender/blenkernel/intern/main.c:74)
BKE_blender_globals_clear() (/home/jacques/blender-git/blender/source/blender/blenkernel/intern/blender.c:139)
setup_app_data(bContext * C, BlendFileData * bfd, const char * filepath, const _Bool is_startup, ReportList * reports) (/home/jacques/blender-git/blender/source/blender/blenkernel/intern/blendfile.c:230)
BKE_blendfile_read(bContext * C, const char * filepath, const struct BlendFileReadParams * params, ReportList * reports) (/home/jacques/blender-git/blender/source/blender/blenkernel/intern/blendfile.c:400)
wm_homefile_read(bContext * C, ReportList * reports, _Bool use_factory_settings, _Bool use_empty_data, _Bool use_userdef, const char * filepath_startup_override, const char * app_template_override, _Bool * r_is_factory_startup) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_files.c:883)
wm_homefile_read_exec(bContext * C, wmOperator * op) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_files.c:1764)
wm_operator_invoke(bContext * C, wmOperatorType * ot, wmEvent * event, PointerRNA * properties, ReportList * reports, const _Bool poll_only, _Bool use_last_properties) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:1347)
wm_operator_call_internal(bContext * C, wmOperatorType * ot, PointerRNA * properties, ReportList * reports, const short context, const _Bool poll_only, wmEvent * event) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:1580)
WM_operator_name_call_ptr(bContext * C, wmOperatorType * ot, short context, PointerRNA * properties) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:1592)
ui_apply_but_funcs_after(bContext * C) (/home/jacques/blender-git/blender/source/blender/editors/interface/interface_handlers.c:769)
ui_popup_handler(bContext * C, const wmEvent * event, void * userdata) (/home/jacques/blender-git/blender/source/blender/editors/interface/interface_handlers.c:9940)
wm_handler_ui_call(bContext * C, wmEventHandler * handler, const wmEvent * event, int always_pass) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:577)
wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:2389)
wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:2622)
wm_event_do_handlers(bContext * C) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:3012)
WM_main(bContext * C) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm.c:417)
main(int argc, const char ** argv) (/home/jacques/blender-git/blender/source/creator/creator.c:504)
@ZedDB, maybe in a debug build? ``` __strlen_avx2() (/build/glibc-OTsEL5/glibc-2.27/sysdeps/x86_64/multiarch/strlen-avx2.S:62) _IO_vfprintf_internal(_IO_FILE * s, const char * format, struct __va_list_tag * ap) (/build/glibc-OTsEL5/glibc-2.27/stdio-common/vfprintf.c:1643) _IO_vsnprintf(char * string, size_t maxlen, const char * format, struct __va_list_tag * args) (/build/glibc-OTsEL5/glibc-2.27/libio/vsnprintf.c:114) clg_str_vappendf(CLogStringBuf * cstr, const char * fmt, struct __va_list_tag * args) (/home/jacques/blender-git/blender/intern/clog/clog.c:178) CLG_logf(CLG_LogType * lg, enum CLG_Severity severity, const char * file_line, const char * fn, const char * fmt) (/home/jacques/blender-git/blender/intern/clog/clog.c:484) id_us_min(ID * id) (/home/jacques/blender-git/blender/source/blender/blenkernel/intern/library.c:239) IDP_FreeProperty_ex(IDProperty * prop, const _Bool do_id_user) (/home/jacques/blender-git/blender/source/blender/blenkernel/intern/idprop.c:1076) IDP_FreeGroup(IDProperty * prop, const _Bool do_id_user) (/home/jacques/blender-git/blender/source/blender/blenkernel/intern/idprop.c:746) IDP_FreeProperty_ex(IDProperty * prop, const _Bool do_id_user) (/home/jacques/blender-git/blender/source/blender/blenkernel/intern/idprop.c:1069) IDP_FreeProperty(IDProperty * prop) (/home/jacques/blender-git/blender/source/blender/blenkernel/intern/idprop.c:1084) node_free_node_ex(Main * bmain, bNodeTree * ntree, bNode * node, _Bool remove_animdata, _Bool use_api_free_cb) (/home/jacques/blender-git/blender/source/blender/blenkernel/intern/node.c:1756) ntreeFreeTree(bNodeTree * ntree) (/home/jacques/blender-git/blender/source/blender/blenkernel/intern/node.c:1843) BKE_libblock_free_datablock(ID * id, const int UNUSED_flag) (/home/jacques/blender-git/blender/source/blender/blenkernel/intern/library_remap.c:770) BKE_id_free_ex(Main * bmain, void * idv, int flag, const _Bool use_flag_from_idtag) (/home/jacques/blender-git/blender/source/blender/blenkernel/intern/library_remap.c:875) BKE_main_free(Main * mainvar) (/home/jacques/blender-git/blender/source/blender/blenkernel/intern/main.c:74) BKE_blender_globals_clear() (/home/jacques/blender-git/blender/source/blender/blenkernel/intern/blender.c:139) setup_app_data(bContext * C, BlendFileData * bfd, const char * filepath, const _Bool is_startup, ReportList * reports) (/home/jacques/blender-git/blender/source/blender/blenkernel/intern/blendfile.c:230) BKE_blendfile_read(bContext * C, const char * filepath, const struct BlendFileReadParams * params, ReportList * reports) (/home/jacques/blender-git/blender/source/blender/blenkernel/intern/blendfile.c:400) wm_homefile_read(bContext * C, ReportList * reports, _Bool use_factory_settings, _Bool use_empty_data, _Bool use_userdef, const char * filepath_startup_override, const char * app_template_override, _Bool * r_is_factory_startup) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_files.c:883) wm_homefile_read_exec(bContext * C, wmOperator * op) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_files.c:1764) wm_operator_invoke(bContext * C, wmOperatorType * ot, wmEvent * event, PointerRNA * properties, ReportList * reports, const _Bool poll_only, _Bool use_last_properties) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:1347) wm_operator_call_internal(bContext * C, wmOperatorType * ot, PointerRNA * properties, ReportList * reports, const short context, const _Bool poll_only, wmEvent * event) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:1580) WM_operator_name_call_ptr(bContext * C, wmOperatorType * ot, short context, PointerRNA * properties) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:1592) ui_apply_but_funcs_after(bContext * C) (/home/jacques/blender-git/blender/source/blender/editors/interface/interface_handlers.c:769) ui_popup_handler(bContext * C, const wmEvent * event, void * userdata) (/home/jacques/blender-git/blender/source/blender/editors/interface/interface_handlers.c:9940) wm_handler_ui_call(bContext * C, wmEventHandler * handler, const wmEvent * event, int always_pass) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:577) wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:2389) wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:2622) wm_event_do_handlers(bContext * C) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:3012) WM_main(bContext * C) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm.c:417) main(int argc, const char ** argv) (/home/jacques/blender-git/blender/source/creator/creator.c:504) ```

@ZedDB with an ASAN build on linux, this should always lead to an hard crash with heavy complains of 'using memory after free' ;)

@ZedDB with an ASAN build on linux, this should always lead to an hard crash with heavy complains of 'using memory after free' ;)

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Ok, I guess it doesn't crash because my current build is a Debug build but without ASAN.

Ok, I guess it doesn't crash because my current build is a Debug build but without ASAN.
Author
Member

@mont29, why is it so important to have all these special cases for node trees? Couldn't we just take the nodetree from a material and put it in bmain as well?
Or we define another type that contains all the nodes but is not an ID. This type can then be used by materials/textures/... But it can also be a part of bNodeTree which is an ID.

struct NodeTree {
     Nodes
     Links
};

struct Material {
    material settings
    NodeTree *tree;
};

struct NodeGroup {
    ID id;
    NodeTree *tree;
};

I'm sure this idea what is not new, but could you repeat the reasoning why we don't do it this way for me, please?

@mont29, why is it so important to have all these special cases for node trees? Couldn't we just take the nodetree from a material and put it in bmain as well? Or we define another type that contains all the nodes but is not an ID. This type can then be used by materials/textures/... But it can also be a part of `bNodeTree` which is an ID. ``` struct NodeTree { Nodes Links }; struct Material { material settings NodeTree *tree; }; struct NodeGroup { ID id; NodeTree *tree; }; ``` I'm sure this idea what is not new, but could you repeat the reasoning why we don't do it this way for me, please?

@JacquesLucke yes, that something like that that should have been made from the start. But no, people like to complicate things at global level, just for the sake of some immediate, localized simplification… Thing is, doing that now is not trivial at all, given the plate of spaghetti that is NodeTree code. Would involve a lot of careful checking and testing to ensure nothing gets broken on the way. Never had the courage to dive really into this. :|

Note that same mistake was done again in 2.8 with collections (master collections of scenes are not in Main database). :'((((

@JacquesLucke yes, that something like that that should have been made from the start. But no, people like to complicate things at global level, just for the sake of some immediate, localized simplification… Thing is, doing that now is not trivial at all, given the plate of spaghetti that is NodeTree code. Would involve a lot of careful checking and testing to ensure nothing gets broken on the way. Never had the courage to dive really into this. :| Note that same mistake was done again in 2.8 with collections (master collections of scenes are not in Main database). :'((((
Author
Member

@mont29, I see, thanks. That's sad...

@mont29, I see, thanks. That's sad...
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61515
No description provided.